--- a/style.css
+++ b/style.css
@@ -40,6 +40,22 @@ a {
   align-items: center;
 }
 
+.players {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  width: 70vw;
+  height: 70vh;
+}
+
+#playerOne,
+#playerTwo {
+  display: flex;
+  flex-direction: column;
+  width: 2px;
+  word-wrap: break-word;
+}
+
 .board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -76,6 +92,8 @@ a {
   border: none;
   font-size: large;
   font-weight: bold;
+  color: white;
+  background-color: black;
 }
 
 .form-group {
